# StatsPro

./: .gitignore  README.md  StatsPro.py  example.json  mcdreforged.plugin.json  pyproject.toml  requirements.txt  stats_pro-v2.0.0.mcdr  stats_pro-v2.0.1.mcdr
config/StatsPro/: config.example.json  uuid.example.json
stats_pro/: __init__.py  cache.py  commands.py  config.py  constants.py  gen_service.py  i18n.py  merge_service.py  models.py  plugin.py  scoreboard_service.py  stats_service.py  utils.py
