[project]
name = "stats_pro"
version = "2.0.0"
description = "Minecraft player statistics management plugin for MCDReforged"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CalciumSilicate"}
]
requires-python = ">=3.10"
keywords = ["minecraft", "mcdr", "mcdreforged", "statistics", "scoreboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "mcdreforged>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/CalciumSilicate/StatsPro"
Repository = "https://github.com/CalciumSilicate/StatsPro"
Issues = "https://github.com/CalciumSilicate/StatsPro/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stats_pro*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["stats_pro"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
